Issue #264 - Fix truncated telem info tooltips/popups
Large tooltips were being limited in size seemingly because they were
being attached to bliss-fields that were nested inside of a number of
different elements in the MOS GUI. Tooltips were otherwise displaying
fine in BLISS GUI where the fields were top level elements within the
bliss-tabset's tabs. Setting the container element for the field popups
and tooltips to 'body' resolves this issue.

CSS has been added to override the default tooltip sizing so that it
matches the popup settings. Additionally, both have been set to
`overflow: auto` so that we don't run into any display issues with
extremely large telemetry information.

Note, the CSS changes in this PR would likely cause the popovers in the
command-search component to look rather ugly. Luckily for us they're not
currently working. This will need to be revisited when/if those are
fixed.

--- a/bliss/gui/static/index.css
+++ b/bliss/gui/static/index.css
@@ -81,6 +81,14 @@ bliss-tabset ul.nav-stacked li.drag-over-after {
     width: 400px;
     min-width: 200px;
     max-width: 400px;
+    overflow: auto;
+}
+
+.tooltip-inner {
+    width: 400px;
+    min-width: 200px;
+    max-width: 400px;
+    overflow: auto;
 }
 
 #command-args-form {
